--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body{
 }
 
 .playlist-container{
-    width: 100%;
+    width: clac(100% - 16px);
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -154,7 +154,7 @@ body{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: calc(100% - 30px);
+    width: calc(100%);
     box-sizing: border-box;
 }
 
@@ -203,7 +203,7 @@ body{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: calc(100% - 30px);
+    width: calc(100%);
     transition: opacity 200ms ease-in-out;
 }
 
@@ -236,9 +236,9 @@ body{
     font-size: 15px;
     cursor: pointer;
 
-    &[select='true']{
-        background-color: #4c4c4c;
-        font-weight: 700;
+    &[select=true]{
+        font-weight: 600;
+        background-color: #313131;
     }
 }
 
