--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     gap: 30px;
     padding-top: 40px;
     margin: 8px;
-    margin-bottom: 103px;
+    margin-bottom: 78px;
 }
 
 .playlist-div{
@@ -220,20 +220,19 @@ body{
 .nav-tab{
     background-color: #212121;
     width: 100%;
-    height: 58px;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: end;
-    align-items: center;
-    background-size: 40px 40px;
+    justify-content: center;
+    align-items: start;
+    background-size: 30px 30px;
     background-repeat: no-repeat;
-    background-position: center 17.5px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color: white;
+    background-position: center center;
+    color: transparent;
+    padding-left: calc(24px + 24px);
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    font-size: 15px;
+    font-size: 12px;
     cursor: pointer;
 
     &[select=true]{
