--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body{
 }
 
 .playlist-container{
-    width: clac(100% - 16px);
+    width: calc(100% - 16px);
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -46,7 +46,7 @@ body{
     gap: 30px;
     padding-top: 40px;
     margin: 8px;
-    margin-bottom: 103px;
+    margin-bottom: 78px;
 }
 
 .playlist-img{
