--- a/style.css
+++ b/style.css
@@ -276,7 +276,8 @@ body{
     background-position: center center;
     border-radius: 10px;
     background-repeat: no-repeat;
-    /* align-self: center; */
+    align-self: center;
+    transform-origin: top left;
 }
 
 .mp-canvas{
@@ -425,6 +426,8 @@ body{
     align-self: center;
     position: absolute;
     bottom: 75px;
+    margin-left: calc(50% - 20px);
+    z-index: 2;
 }
 
 .mp-text-playlist{
@@ -438,4 +441,34 @@ body{
     position: absolute;
     bottom: 40px;
     left: 0;
+    z-index: 2;
+}
+
+.mp{
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:2;
+    width:100%;
+    height:100%;
+    display:none;
+    user-select:none;
+}
+
+@keyframes mpGoUP {
+    from{
+        transform: translateY(100%);
+    }
+    to{
+        transform: translateY(0);
+    }
+}
+
+@keyframes mpGoDown {
+    from{
+        transform: translateY(0);
+    }
+    to{
+        transform: translateY(100%);
+    }
 }
