--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ body{
     font-weight: 400;
     font-size: 12px;
     cursor: pointer;
+    user-select:none;
 
     &[select=true]{
         font-weight: 600;
@@ -565,4 +566,5 @@ body{
     justify-content: center;
     align-items: center;
     color: white;
+
 }
