--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body{
     height: 57px;
     gap: 16px;
     cursor: pointer;
+    
 }
 
 .playlist-container{
@@ -89,7 +90,9 @@ body{
     align-items: center;
     width: 100%;
     background-color: #000000;
-    padding-left: 12px;
+    padding-left: 6px;
+    color: white;
+    font-family: 'Roboto', sans-serif;
 }
 
 .div-playlists-items{
@@ -545,6 +548,7 @@ body{
     padding-left: 20px;
     gap: 5px;
     width:70%;
+    cursor:text;
 }
 
 .search-bar-input{
@@ -553,11 +557,17 @@ body{
     border: none;
     color: white;
     font-size: 16px;
+
     &:focus-visible{
         background-color: transparent;
         border: none;
         outline: none;
     }
+    
+}
+
+.search-bar-input::-webkit-search-cancel-button {
+    -webkit-appearance: none;
 }
 
 .btn-search-bar{
@@ -567,6 +577,52 @@ body{
     justify-content: center;
     align-items: center;
     color: white;
+    cursor: pointer;
 
 }
 
+.channel-nav{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    width: 100%;
+    height: 50px;
+    gap: 15px;
+    padding-left: 20px;
+}
+
+.channel-nav-tab{
+    color: #aaaaaa;
+    font-family: 'Roboto',sans-serif;
+    &:hover{
+        text-decoration: underline 2px #aaaaaa;
+        text-underline-offset:7px;
+    }
+    user-select: none;
+    cursor: pointer;
+}
+
+.channel-nav-tab[select=true]{
+    color: #ffffff;
+    text-decoration: underline 2px #ffffff;
+    text-underline-offset:7px;
+}
+
+.div-videos{
+    display: none;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.div-shorts{
+    display:none;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
