--- a/style.css
+++ b/style.css
@@ -291,6 +291,7 @@ body{
     width: 100%;
     height: 100%;
     z-index: 1;
+    background-color: black;
 }
 .mp-container{
     position: fixed;
@@ -637,3 +638,7 @@ body{
     font-size: 16px;
     text-align: center;
 }
+
+
+
+
