--- a/blindTest.css
+++ b/blindTest.css
@@ -182,6 +182,7 @@
     text-align: center;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .bt-info-text-bottom{
