--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body{
     background-color: rgba(0, 0, 0);
     margin: 0;
+    overflow: hidden;
 }
 
 .playlists-container{
@@ -122,7 +123,7 @@ body{
 .playlist-imgs{
     height: var(--image-height);
     aspect-ratio: 1/1;
-    background-size: contain ;
+    background-size: cover ;
     background-position: center center;
     border-radius: 5px;
     background-repeat: no-repeat;
