--- a/blindTest.css
+++ b/blindTest.css
@@ -9,16 +9,6 @@
     user-select:none;
 }
 
-.bt-img{
-    width: 100%;
-    aspect-ratio: 1 / 1;
-    background-size:cover;
-    background-position: center center;
-    border-radius: 10px;
-    background-repeat: no-repeat;
-    align-self: center;
-    transform-origin: top left;
-}
 
 /* @media (width > 400px){
     .bt-img{
@@ -45,12 +35,12 @@
     z-index: 2;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: space-between;
     padding: 16px;
 }
 
 .bt-box{
-    margin-top: 30px;
+    margin-top: 11px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -60,11 +50,12 @@
 }
 
 .bt-text-title{
+    display: block;
     color: white;
     margin: 0;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
-    font-size: 27px;
+    font-size: 25px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -77,7 +68,7 @@
     margin: 0;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    font-size: 17px;
+    font-size: 15px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -147,9 +138,9 @@
 }
 
 .countdownSVG{
-    width: 240px;
+    aspect-ratio: 1 / 1;
+    height: 100%;
     align-self: center;
-    margin-top: 24px;
 }
 
 .bt-question{
@@ -194,6 +185,7 @@
 
 .bt-info-text-bottom{
     margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -201,4 +193,49 @@
     color: #ffffff;
     font-family: 'Inter',sans-serif;
     font-size: 0.75rem;
+    text-align: center;
+}
+
+.bt-container-part1{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.bt-container-part2{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+
+.bt-song{
+    display:none;
+    justify-content:center;
+    flex-direction:column;
+    height: 100%;
+    width: fit-content;
+    align-self:center;
+    margin-top:14px;
+    margin-bottom:16px;
+    max-height: 100%;
+}
+
+.bt-img{
+    height: min(calc(100% - 14px - 16px - 53px),300px);
+    aspect-ratio: 1 / 1;
+    background-size:cover;
+    background-position: center center;
+    border-radius: 10px;
+    background-repeat: no-repeat;
+    transform-origin: top left;
+}
+
+@media (width < 332px){
+    .bt-img{
+        max-height: min(calc(100vw - 32px), 300px);
+        max-width: min(calc(100vw - 32px), 300px);
+    }
 }
