--- a/style.css
+++ b/style.css
@@ -551,6 +551,29 @@ body{
     gap: 5px;
     width:70%;
     cursor:text;
+    
+}
+
+@keyframes SearchAnim {
+    0%{
+        translate: 0px 0px;
+    }
+    20%{
+        translate: 0px 60px;
+    }
+
+    100%{
+        translate:0px calc(-50vh + 70px + 30px);
+    }
+}
+
+@keyframes SearchAnimReverse {
+    20%{
+        translate: 0px 0px;
+    }
+    100%{
+        translate:0px calc(-50vh + 70px + 30px);
+    }
 }
 
 .search-bar-input{
